--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,5 @@ $RECYCLE.BIN/
 
 # Vim temporary swap files
 *.swp
+/ParkingSystem.Domain/Interfaces/IPriceTableRepository.cs
+/ParkingSystem.Domain/Interfaces/IPriceTableRepository.cs
