fix : Adding create and get all functionalities for category

--- a/ParkingSystem.API/appsettings.json
+++ b/ParkingSystem.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;DataBase=ParkingSystem;Uid=postgres;Pwd=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
